--- a/20162121010_PR1_AI.ipynb
+++ b/20162121010_PR1_AI.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMI9MeVdwzJ/C6e7QamlEXX",
+      "authorship_tag": "ABX9TyNOivM8v3MO8nlbYk1+kzAn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +98,7 @@
         "    time.sleep(0.5)\n",
         "  @Rule(AND(weather(wet=\"rainy\"),weather(wet=\"windy\"),weather(wet=\"snowy\"),weather(wet=\"sunny\")))\n",
         "  def all(self):\n",
-        "    print(\"\\033[33mNote : Keep HANUMAN CHALISA\\033[0m\")\n",
+        "    print(\"\\033[33mNote : Keep HANUMAN CHALISA with you.\\033[0m\")\n",
         "    time.sleep(0.5)\n",
         "  \n",
         "  # create rules based on temperature, duration and events for additional suggestion\n",
